--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ body.dark { background-color: #121212 !important; color: #e8eaed; }
 
 <div id="results">
   <div class="topbar">
-    <div class="back" onclick="goHome()">⬅ Searchmas</div>
+    <div class="back" onclick="goHome()">⬅</div>
     <input id="qTop">
   </div>
 
