--- a/index.html
+++ b/index.html
@@ -96,6 +96,293 @@ body.dark { background-color: #121212 !important; color: #e8eaed; }
 </head>
 
 <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+
+<link rel="icon" type="image/png" href="favicon.png">
+<link rel="manifest" href="manifest.json">
+
+<script>
+  // IE detection
+  var ie = /*@cc_on!@*/false || !!document.documentMode;
+  if (ie){
+    window.location.replace("ie.html");
+  }
+</script>
+
+<title>Searchmas</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="theme-color" content="#1a73e8">
+
+<!-- Google PSE -->
+<script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
+
+<style>
+html, body {margin:0; padding:0; height:100%; font-family:Arial,sans-serif;}
+body{
+  background:
+     url('Santa.png') left center / 50% 100vh no-repeat fixed,
+     url('Santa.png') right center / 50% 100vh no-repeat fixed;
+}
+@media (max-width: 768px){
+  body { background: url('Santa.png') center center / cover no-repeat; }
+}
+
+#home{min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center;}
+.logo{
+  font-size:clamp(48px,10vw,80px);
+  font-weight:bold;
+  display:inline-flex;
+}
+.logo span:nth-child(1){color:#4285f4}
+.logo span:nth-child(2){color:#ff9800}
+.logo span:nth-child(3){color:#fbbc05}
+.logo span:nth-child(4){color:#4285f4}
+.logo span:nth-child(5){color:#34a853}
+.logo span:nth-child(6){color:#ff9800}
+.logo span:nth-child(7){color:#fbbc05}
+.logo span:nth-child(8){color:#4285f4}
+.logo span:nth-child(9){color:#34a853}
+
+.search-box{max-width:580px;width:90%; padding:0 16px;}
+input{width:100%; padding:14px 20px; font-size:18px; border-radius:24px; border:1px solid #dfe1e5;}
+
+#results{display:none; max-width:1400px; margin:auto; padding:15px; min-height:100vh;}
+.topbar{display:flex; gap:12px; align-items:center; margin-bottom:12px;}
+.back{cursor:pointer; font-size:22px;}
+
+.tabs{display:flex; gap:18px; margin:15px 0; border-bottom:1px solid #ddd;}
+.tab{cursor:pointer; color:#5f6368; padding-bottom:8px;}
+.tab.active{color:#1a73e8; border-bottom:3px solid #1a73e8;}
+
+.grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:12px;}
+.grid img{width:100%; aspect-ratio:16/9; object-fit:cover; border-radius:8px;}
+
+.news-col{display:flex; flex-direction:column; gap:16px; max-width:700px;}
+.news-card{
+  display:flex; align-items:center; gap:14px; padding:16px;
+  background:#fff; border-radius:14px; text-decoration:none; color:#000;
+  box-shadow:0 2px 6px rgba(0,0,0,.08);
+}
+
+/* PSE styling */
+.gsc-control-cse,
+.gsc-control-cse * { background:transparent !important; border:none !important; box-shadow:none !important; }
+.gsc-above-wrapper-area,
+.gsc-tabsArea,
+.gsc-adBlock,
+.gcsc-find-more-on-google { display:none !important; }
+/* Dark Mode Styles */
+body.dark { background-color: #121212 !important; color: #e8eaed; }
+.dark #results, .dark #home { background-color: #121212; }
+.dark input { background: #303134; color: #fff; border-color: #5f6368; }
+.dark .tab { color: #bdc1c6; }
+.dark .news-card { background: #202124; color: #e8eaed; }
+.dark .logo span { color: #8ab4f8 !important; } /* Uniform blue logo for dark mode */
+
+#darkToggle {
+  position: fixed; bottom: 20px; right: 20px; z-index: 1000;
+  padding: 10px 15px; border-radius: 20px; cursor: pointer;
+  background: #1a73e8; color: white; border: none; font-weight: bold;
+}
+
+#wikiSummary img { object-fit: cover; border-radius:8px; }
+#wikiSummary div { line-height: 1.4; }
+</style>
+</head>
+
+<body>
+
+<div id="home">
+  <div class="logo">
+    <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
+    <span>h</span><span>m</span><span>a</span><span>s</span>
+  </div>
+  <form class="search-box" onsubmit="startSearch(event)">
+    <input id="qHome" placeholder="Search the web">
+  </form>
+</div>
+
+<div id="results">
+  <div class="topbar">
+    <div class="back" onclick="goHome()">⬅</div>
+    <input id="qTop">
+  </div>
+
+  <div class="tabs">
+    <div class="tab active" data-id="1">All</div>
+    <div class="tab" data-id="2">Images</div>
+    <div class="tab" data-id="3">Videos</div>
+    <div class="tab" data-id="4">News</div>
+  </div>
+
+  <div id="content"></div>
+</div>
+
+<script>
+const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
+const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
+
+let buttonId = 1; // default 'All'
+const homeEl=document.getElementById("home");
+const resEl=document.getElementById("results");
+const qHome=document.getElementById("qHome");
+const qTop=document.getElementById("qTop");
+const content=document.getElementById("content");
+
+const params=new URLSearchParams(location.search);
+const startQ=params.get("q");
+if(startQ && startQ.trim()) showResults(startQ);
+
+function startSearch(e){
+  e.preventDefault();
+  const q=qHome.value.trim();
+  if(!q) return;
+  history.pushState({}, "", "?q="+encodeURIComponent(q));
+  showResults(q);
+}
+
+function showResults(q){
+  homeEl.style.display="none";
+  resEl.style.display="block";
+  qTop.value=q;
+  search();
+}
+
+function goHome(){
+  history.replaceState({}, "", location.pathname);
+  resEl.style.display="none";
+  homeEl.style.display="flex";
+}
+
+document.querySelectorAll(".tab").forEach(tabEl=>{
+  tabEl.onclick=()=>{
+    buttonId = parseInt(tabEl.dataset.id);
+    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
+    tabEl.classList.add("active");
+    search();
+  };
+});
+
+function search(){
+  const q=qTop.value.trim();
+  if(!q) return;
+  const enc=encodeURIComponent(q);
+
+  // --- All tab with Wikipedia summary ---
+  if(buttonId===1){
+    content.innerHTML=""; // clear content
+
+    // 1️⃣ Wikipedia Summary Container
+    const wikiContainer = document.createElement("div");
+    wikiContainer.id="wikiSummary";
+    wikiContainer.style.marginBottom="16px";
+    content.appendChild(wikiContainer);
+
+    fetch(`https://en.wikipedia.org/api/rest_v1/page/summary/${enc}`)
+      .then(r=>r.json())
+      .then(w=>{
+        if(!w.title || w.type==="disambiguation") {
+          wikiContainer.style.display="none";
+          return;
+        }
+        wikiContainer.innerHTML=`
+          <div style="display:flex; gap:12px; align-items:flex-start; background:#f1f3f4; padding:16px; border-radius:12px;">
+            ${w.thumbnail ? `<img src="${w.thumbnail.source}" width="80">` : ""}
+            <div>
+              <div style="font-size:18px; font-weight:bold;">${w.title}</div>
+              <div style="font-size:14px; color:#5f6368;">${w.extract}</div>
+              <a href="https://en.wikipedia.org/wiki/${encodeURIComponent(w.title)}" target="_blank" style="font-size:13px; color:#1a73e8;">Read more</a>
+            </div>
+          </div>
+        `;
+      })
+      .catch(err=>{ console.error(err); wikiContainer.style.display="none"; });
+
+    // 2️⃣ Google Custom Search results
+    content.innerHTML += `<div class="gcse-searchresults-only" data-mobileLayout="enabled"></div>`; 
+    const newHash = `#gsc.tab=0&gsc.q=${enc}`;
+    window.history.replaceState(null, null, newHash);
+
+    const waitPSE = setInterval(() => {
+      if(window.google && google.search && google.search.cse && google.search.cse.element){
+        clearInterval(waitPSE);
+        const element = google.search.cse.element.getElement();
+        if(element) element.execute(q);
+        else google.search.cse.element.go(q);
+      }
+    }, 100);
+    return;
+  }
+
+  // Images tab
+  if(buttonId===2){
+    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
+      headers:{Authorization:"Client-ID "+UNSPLASH}
+    })
+    .then(r=>r.json())
+    .then(d=>{
+      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
+    });
+    return;
+  }
+
+  // Videos tab
+ if(buttonId === 3){
+  const qEncoded = encodeURIComponent(q);
+  fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${qEncoded}&key=${YT}`)
+    .then(response => response.json())
+    .then(data => {
+      if(!data.items || !data.items.length){
+        content.innerHTML = "<p>No videos found.</p>";
+        return;
+      }
+
+      // Create a grid of videos
+      content.innerHTML = `<div class="grid">` + data.items.map(video => {
+        const title = video.snippet.title;
+        const thumb = video.snippet.thumbnails.high.url;
+        const videoUrl = `https://www.youtube.com/watch?v=${video.id.videoId}`;
+        return `
+          <div style="display:flex; flex-direction:column; gap:6px;">
+            <a href="${videoUrl}" target="_blank">
+              <img src="${thumb}" style="border-radius:8px;">
+            </a>
+            <a href="${videoUrl}" target="_blank" style="text-decoration:none; color:#1a73e8; font-weight:500; font-size:14px; line-height:1.2;">
+              ${title}
+            </a>
+          </div>
+        `;
+      }).join('') + `</div>`;
+    })
+    .catch(err => {
+      console.error(err);
+      content.innerHTML = "<p>Error loading videos.</p>";
+    });
+}
+
+
+  // News tab
+  if(buttonId===4){
+    content.innerHTML=`<div class="news-col">
+      <a class="news-card" href="https://news.google.com/search?q=${enc}" target="_blank">
+        <img src="https://google.com/favicon.ico" width="32" height="32">
+        <div><div style="font-size:18px;font-weight:600;">Google News</div></div>
+      </a>
+      <a class="news-card" href="https://www.bing.com/news/search?q=${enc}" target="_blank">
+        <img src="https://bing.com/favicon.ico" width="32" height="32">
+        <div><div style="font-size:18px;font-weight:600;">Bing News</div></div>
+      </a>
+    </div>`;
+    return;
+  }
+}
+</script>
+</body>
+</html>
+
 
 <div id="home">
   <div class="logo">
