--- a/index.html
+++ b/index.html
@@ -916,8 +916,7 @@ function search(){
 
 <div id="home">
   <div class="logo">
-    <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
-    <span>h</span><span>m</span><span>a</span><span>s</span>
+    <h1>Searchmas</h1>
   </div>
   <form class="search-box" onsubmit="startSearch(event)">
     <input id="qHome" placeholder="Search the web">
