--- a/index.html
+++ b/index.html
@@ -250,14 +250,10 @@ function search(){
       });
     return;
   }
-
-  if(buttonId===4){
-    content.innerHTML=`<div class="news-col">
-      <a class="news-card" target="_blank" href="https://news.google.com/search?q=${enc}">Google News</a>
-      <a class="news-card" target="_blank" href="https://bing.com/news/search?q=${enc}">Bing News</a>
-    </div>`;
-  }
-}
+if(buttonId===4)
+  <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60">
+</script>
+<div class="gcse-searchresults-only"></div>
 
 function runPSE(q){
   const t=setInterval(()=>{
