--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <meta name="theme-color" content="#1a73e8">
 
 <script>
-  var ie = /*@cc_on!@*/false || !!document.documentMode;
-  if (ie) location.replace("ie.html");
+var ie = /*@cc_on!@*/false || !!document.documentMode;
+if (ie) location.replace("ie.html");
 </script>
 
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 <style>
-html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
+html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif}
 
 body{
   background:
@@ -27,7 +27,7 @@ body{
 }
 
 @media (max-width:768px){
-  body{background:url('Santa.png') center center / cover no-repeat fixed;}
+  body{background:url('Santa.png') center center / cover no-repeat fixed}
 }
 
 #home{
@@ -54,16 +54,7 @@ body{
 .logo span:nth-child(8){color:#4285f4}
 .logo span:nth-child(9){color:#34a853}
 
-.search-box{max-width:580px;width:90%;padding:0 16px;}
-
-input{
-  width:100%;
-  padding:14px 20px;
-  font-size:18px;
-  border-radius:24px;
-  border:1px solid #dfe1e5;
-  outline:none;
-}
+.search-box{max-width:580px;width:90%;padding:0 16px}
 
 #results{
   display:none;
@@ -73,28 +64,12 @@ input{
   min-height:100vh;
 }
 
-.topbar{display:flex;gap:12px;align-items:center;margin-bottom:12px;}
-.back{cursor:pointer;font-size:22px;}
+.topbar{display:flex;gap:12px;align-items:center;margin-bottom:12px}
+.back{cursor:pointer;font-size:22px}
 
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;}
-.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
-.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
-
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
-.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;}
-
-.news-col{display:flex;flex-direction:column;gap:16px;max-width:700px;}
-.news-card{
-  display:flex;
-  align-items:center;
-  gap:14px;
-  padding:16px;
-  background:#fff;
-  border-radius:14px;
-  text-decoration:none;
-  color:#000;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
-}
+.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd}
+.tab{cursor:pointer;color:#5f6368;padding-bottom:8px}
+.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8}
 
 .gsc-control-cse,
 .gsc-control-cse *{
@@ -106,163 +81,77 @@ input{
 .gsc-above-wrapper-area,
 .gsc-tabsArea,
 .gsc-adBlock,
-.gcsc-find-more-on-google{display:none!important;}
-
-#wikiSummary img{border-radius:8px;object-fit:cover}
-#wikiSummary div{line-height:1.4}
+.gcsc-find-more-on-google{display:none!important}
 </style>
 </head>
 
 <body>
 
+<!-- HOME -->
 <div id="home">
   <div class="logo">
     <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
     <span>h</span><span>m</span><span>a</span><span>s</span>
   </div>
 
-  <form class="search-box" onsubmit="startSearch(event)">
-    <input id="qHome" placeholder="Search the web">
-  </form>
+  <div class="search-box">
+    <div class="gcse-searchbox-only"></div>
+  </div>
 </div>
 
+<!-- RESULTS -->
 <div id="results">
   <div class="topbar">
     <div class="back" onclick="goHome()">⬅</div>
-    <input id="qTop">
+    <div style="flex:1">
+      <div class="gcse-searchbox-only"></div>
+    </div>
   </div>
 
   <div class="tabs">
-    <div class="tab active" data-id="1">All</div>
-    <div class="tab" data-id="2">Images</div>
-    <div class="tab" data-id="3">Videos</div>
-    <div class="tab" data-id="4">News</div>
+    <div class="tab active" onclick="setTab(0)">All</div>
+    <div class="tab" onclick="setTab(1)">Images</div>
   </div>
 
-  <div id="content"></div>
+  <div class="gcse-searchresults-only"></div>
 </div>
 
 <script>
-const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
-
-let buttonId=1;
-
-const homeEl=document.getElementById("home");
-const resEl=document.getElementById("results");
-const qHome=document.getElementById("qHome");
-const qTop=document.getElementById("qTop");
-const content=document.getElementById("content");
+const home=document.getElementById("home");
+const results=document.getElementById("results");
+const tabs=document.querySelectorAll(".tab");
 
 const params=new URLSearchParams(location.search);
-const startQ=params.get("q");
-if(startQ) showResults(startQ);
+const q=params.get("q");
 
-function startSearch(e){
-  e.preventDefault();
-  const q=qHome.value.trim();
-  if(!q) return;
-  history.pushState({}, "", "?q="+encodeURIComponent(q));
-  showResults(q);
+if(q){
+  home.style.display="none";
+  results.style.display="block";
+}else{
+  home.style.display="flex";
 }
 
-function showResults(q){
-  homeEl.style.display="none";
-  resEl.style.display="block";
-  qTop.value=q;
-  search();
+/* Proper PSE tab switching */
+function setTab(n){
+  location.hash="gsc.tab="+n;
+  tabs.forEach(t=>t.classList.remove("active"));
+  tabs[n].classList.add("active");
 }
 
+/* Back to homepage */
 function goHome(){
-  history.replaceState({}, "", location.pathname);
-  resEl.style.display="none";
-  homeEl.style.display="flex";
+  history.pushState({}, "", location.pathname);
+  location.reload();
 }
 
-document.querySelectorAll(".tab").forEach(tab=>{
-  tab.onclick=()=>{
-    buttonId=+tab.dataset.id;
-    document.querySelectorAll(".tab").forEach(t=>t.classList.remove("active"));
-    tab.classList.add("active");
-    search();
-  };
-});
-
-function search(){
-  const q=qTop.value.trim();
-  if(!q) return;
-  const enc=encodeURIComponent(q);
-
-  content.innerHTML="";
-
-  if(buttonId===1){
-    const wiki=document.createElement("div");
-    wiki.id="wikiSummary";
-    wiki.style.marginBottom="16px";
-    content.appendChild(wiki);
-
-    fetch(`https://en.wikipedia.org/api/rest_v1/page/summary/${enc}`)
-      .then(r=>r.json())
-      .then(w=>{
-        if(!w.title||w.type==="disambiguation") return;
-        wiki.innerHTML=`
-        <div style="display:flex;gap:12px;background:#f1f3f4;padding:16px;border-radius:12px">
-          ${w.thumbnail?`<img src="${w.thumbnail.source}" width="80">`:""}
-          <div>
-            <b>${w.title}</b>
-            <div>${w.extract}</div>
-            <a target="_blank" href="https://en.wikipedia.org/wiki/${encodeURIComponent(w.title)}">Read more</a>
-          </div>
-        </div>`;
-      });
-
-    content.innerHTML+=`<div class="gcse-searchresults-only"></div>`;
-    window.history.replaceState(null,null,`#gsc.tab=0&gsc.q=${enc}`);
-    runPSE(q);
-    return;
-  }
-
-  if(buttonId===2){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
-      headers:{Authorization:"Client-ID "+UNSPLASH}
-    })
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
-    });
-    return;
-  }
-
-  if(buttonId===3){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">`+
-          d.items.map(v=>`
-          <div>
-            <a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}">
-              <img src="${v.snippet.thumbnails.high.url}">
-            </a>
-            <a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}">
-              ${v.snippet.title}
-            </a>
-          </div>`).join("")+`</div>`;
-      });
-    return;
-  }
-if(buttonId===4)
-  <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60">
-</script>
-<div class="gcse-searchresults-only"></div>
-
-function runPSE(q){
-  const t=setInterval(()=>{
-    if(window.google?.search?.cse?.element){
-      clearInterval(t);
+/* Let Google PSE handle search natively */
+window.__gcse = {
+  callback: function(){
+    if(q && window.google?.search?.cse?.element){
       google.search.cse.element.go(q);
     }
-  },100);
-}
+  }
+};
 </script>
 
 </body>
