--- a/index.html
+++ b/index.html
@@ -2,41 +2,27 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Searchmas</title>
 <link rel="icon" type="image/png" href="favicon.png">
 <link rel="manifest" href="manifest.json">
-
-<script>
-  // IE detection
-  var ie = /*@cc_on!@*/false || !!document.documentMode;
-  if (ie){
-    window.location.replace("ie.html");
-  }
-</script>
-
-<title>Searchmas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#1a73e8">
 
 <!-- Google PSE -->
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 <style>
-html, body {margin:0; padding:0; height:100%; font-family:Arial,sans-serif;}
-body{
-  background:
-     url('Santa.png') left center / 50% 100vh no-repeat fixed,
-     url('Santa.png') right center / 50% 100vh no-repeat fixed;
+html, body {margin:0; padding:0; font-family:Arial,sans-serif; min-height:100vh;}
+body {
+  background:url('Santa.png') center/cover no-repeat fixed;
+  display:flex; flex-direction:column; align-items:center; justify-content:flex-start;
 }
-@media (max-width: 768px){
-  body { background: url('Santa.png') center center / cover no-repeat; }
-}
-
-#home{min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center;}
+#home, #results {width:100%; max-width:1400px; display:flex; flex-direction:column; align-items:center; padding:20px;}
 .logo{
-  font-size:clamp(48px,10vw,80px);
+  font-size:clamp(36px,8vw,72px);
   font-weight:bold;
   display:inline-flex;
+  margin-bottom:20px;
+  text-align:center;
 }
 .logo span:nth-child(1){color:#4285f4}
 .logo span:nth-child(2){color:#ff9800}
@@ -48,40 +34,30 @@ body{
 .logo span:nth-child(8){color:#4285f4}
 .logo span:nth-child(9){color:#34a853}
 
-.search-box{max-width:580px;width:90%; padding:0 16px;}
-input{width:100%; padding:14px 20px; font-size:18px; border-radius:24px; border:1px solid #dfe1e5;}
+.search-container{width:90%; max-width:600px; margin-bottom:20px;}
 
-#results{display:none; max-width:1400px; margin:auto; padding:15px; min-height:100vh;}
-.topbar{display:flex; gap:12px; align-items:center; margin-bottom:12px;}
-.back{cursor:pointer; font-size:22px;}
+#results {display:none; width:100%; padding:10px;}
+.topbar{display:flex; gap:10px; align-items:center; margin-bottom:12px; flex-wrap:wrap;}
+.back{cursor:pointer; font-size:22px; flex-shrink:0;}
 
-.tabs{display:flex; gap:18px; margin:15px 0; border-bottom:1px solid #ddd;}
-.tab{cursor:pointer; color:#5f6368; padding-bottom:8px;}
-.tab.active{color:#1a73e8; border-bottom:3px solid #1a73e8;}
+.tabs{
+  display:flex; gap:12px; margin:15px 0; border-bottom:1px solid #ddd; flex-wrap:wrap;
+}
+.tab{
+  cursor:pointer; color:#5f6368; padding:8px 12px; border-radius:16px;
+}
+.tab.active{color:#1a73e8; border:2px solid #1a73e8; background:rgba(26,115,232,0.1);}
 
+#content{display:flex; flex-direction:column; gap:12px; width:100%;}
 .grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:12px;}
 .grid img{width:100%; aspect-ratio:16/9; object-fit:cover; border-radius:8px;}
+.grid video{width:100%; border-radius:8px;}
 
-.news-col{display:flex; flex-direction:column; gap:16px; max-width:700px;}
-.news-card{
-  display:flex; align-items:center; gap:14px; padding:16px;
-  background:#fff; border-radius:14px; text-decoration:none; color:#000;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
+@media(max-width:768px){
+  .grid{grid-template-columns:1fr;}
 }
-
-/* PSE cleanup */
-.gsc-control-cse,
-.gsc-control-cse * { background:transparent !important; border:none !important; box-shadow:none !important; }
-.gsc-above-wrapper-area,
-.gsc-tabsArea,
-.gsc-adBlock,
-.gcsc-find-more-on-google { display:none !important; }
-
-#wikiSummary img { object-fit: cover; border-radius:8px; }
-#wikiSummary div { line-height: 1.4; }
 </style>
 </head>
-
 <body>
 
 <div id="home">
@@ -89,131 +65,103 @@ input{width:100%; padding:14px 20px; font-size:18px; border-radius:24px; border:
     <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
     <span>h</span><span>m</span><span>a</span><span>s</span>
   </div>
-  <form class="search-box" onsubmit="startSearch(event)">
-    <input id="qHome" placeholder="Search the web">
-  </form>
+  <div class="search-container">
+    <div class="gcse-searchbox-only"></div>
+  </div>
 </div>
 
 <div id="results">
   <div class="topbar">
     <div class="back" onclick="goHome()">⬅</div>
-    <input id="qTop">
+    <div class="search-container" style="flex:1;">
+      <div class="gcse-searchbox-only"></div>
+    </div>
   </div>
 
   <div class="tabs">
-    <div class="tab active" data-id="1">All</div>
-    <div class="tab" data-id="2">Images</div>
-    <div class="tab" data-id="3">Videos</div>
-    <div class="tab" data-id="4">News</div>
+    <div class="tab active" data-id="all">All</div>
+    <div class="tab" data-id="images">Images</div>
+    <div class="tab" data-id="videos">Videos</div>
+    <div class="tab" data-id="news">News</div>
   </div>
 
-  <div id="content"></div>
+  <div id="content">
+    <div class="gcse-searchresults-only"></div>
+    <div class="grid" id="image-results"></div>
+    <div class="grid" id="video-results"></div>
+  </div>
 </div>
 
 <script>
-const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
-
-let buttonId = 1;
-const homeEl=document.getElementById("home");
-const resEl=document.getElementById("results");
-const qHome=document.getElementById("qHome");
-const qTop=document.getElementById("qTop");
-const content=document.getElementById("content");
-
-const params=new URLSearchParams(location.search);
-const startQ=params.get("q");
-if(startQ && startQ.trim()) showResults(startQ);
-
-function startSearch(e){
-  e.preventDefault();
-  const q=qHome.value.trim();
-  if(!q) return;
-  history.pushState({}, "", "?q="+encodeURIComponent(q));
-  showResults(q);
-}
-
-function showResults(q){
-  homeEl.style.display="none";
-  resEl.style.display="block";
-  qTop.value=q;
-  search();
-}
+// === PLACEHOLDER KEYS (wired, replace when needed) ===
+const UNSPLASH_KEY = "1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk"; 
+const YOUTUBE_KEY = "AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI"; 
 
 function goHome(){
-  history.replaceState({}, "", location.pathname);
-  resEl.style.display="none";
-  homeEl.style.display="flex";
+  document.getElementById("results").style.display="none";
+  document.getElementById("home").style.display="flex";
 }
 
-document.querySelectorAll(".tab").forEach(tab=>{
-  tab.onclick=()=>{
-    buttonId = +tab.dataset.id;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    tab.classList.add("active");
-    search();
-  }
+// Tabs switching
+const tabs = document.querySelectorAll('.tab');
+tabs.forEach(tab=>{
+  tab.addEventListener('click',()=>{
+    tabs.forEach(t=>t.classList.remove('active'));
+    tab.classList.add('active');
+    switchTab(tab.dataset.id);
+  });
 });
 
-function search(){
-  const q=qTop.value.trim();
-  if(!q) return;
-  const enc=encodeURIComponent(q);
-
-  if(buttonId===1){
-    content.innerHTML="";
-    const wiki=document.createElement("div");
-    wiki.id="wikiSummary";
-    wiki.style.marginBottom="16px";
-    content.appendChild(wiki);
-
-    fetch(`https://en.wikipedia.org/api/rest_v1/page/summary/${enc}`)
-      .then(r=>r.json())
-      .then(w=>{
-        if(!w.title||w.type==="disambiguation"){wiki.style.display="none";return;}
-        wiki.innerHTML=`
-        <div style="display:flex;gap:12px;background:#f1f3f4;padding:16px;border-radius:12px;">
-        ${w.thumbnail?`<img src="${w.thumbnail.source}" width="80">`:""}
-        <div>
-        <b>${w.title}</b><br>${w.extract}
-        </div></div>`;
-      });
-
-    content.innerHTML+=`<div class="gcse-searchresults-only"></div>`;
-    const wait=setInterval(()=>{
-      if(window.google?.search?.cse?.element){
-        clearInterval(wait);
-        google.search.cse.element.go(q);
-      }
-    },100);
-  }
-
-  if(buttonId===2){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
-      headers:{Authorization:"Client-ID "+UNSPLASH}
-    }).then(r=>r.json()).then(d=>{
-      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
-    });
-  }
-
-  if(buttonId===3){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-    .then(r=>r.json()).then(d=>{
-      content.innerHTML=`<div class="grid">${d.items.map(v=>`
-        <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-        <img src="${v.snippet.thumbnails.high.url}">
-        </a>`).join("")}</div>`;
-    });
-  }
-
-  if(buttonId===4){
-    content.innerHTML=`<div class="news-col">
-    <a class="news-card" href="https://news.google.com/search?q=${enc}" target="_blank">Google News</a>
-    <a class="news-card" href="https://bing.com/news/search?q=${enc}" target="_blank">Bing News</a>
-    </div>`;
+function switchTab(id){
+  document.getElementById('image-results').style.display='none';
+  document.getElementById('video-results').style.display='none';
+  if(id==='images') {
+    document.getElementById('image-results').style.display='grid';
+    fetchImages();
+  } else if(id==='videos'){
+    document.getElementById('video-results').style.display='grid';
+    fetchVideos();
   }
 }
-</script>
 
+// Unsplash images fetch
+async function fetchImages(){
+  const query = document.querySelector('.gcse-searchbox-only input')?.value || "nature";
+  const url = `https://api.unsplash.com/search/photos?query=${encodeURIComponent(query)}&client_id=${UNSPLASH_KEY}&per_page=12`;
+  try{
+    const res = await fetch(url);
+    const data = await res.json();
+    const grid = document.getElementById('image-results');
+    grid.innerHTML='';
+    data.results.forEach(img=>{
+      const el = document.createElement('img');
+      el.src = img.urls.small;
+      grid.appendChild(el);
+    });
+  }catch(e){console.error(e);}
+}
+
+// YouTube V3 API fetch (no iframe, using API)
+async function fetchVideos(){
+  const query = document.querySelector('.gcse-searchbox-only input')?.value || "fun";
+  const url = `https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&q=${encodeURIComponent(query)}&key=${YOUTUBE_KEY}&maxResults=12`;
+  try{
+    const res = await fetch(url);
+    const data = await res.json();
+    const grid = document.getElementById('video-results');
+    grid.innerHTML='';
+    data.items.forEach(v=>{
+      const div = document.createElement('div');
+      div.style.cursor='pointer';
+      div.style.border='1px solid #ccc';
+      div.style.padding='6px';
+      div.style.borderRadius='8px';
+      div.innerHTML = `<strong>${v.snippet.title}</strong><br>${v.snippet.channelTitle}`;
+      div.onclick = ()=>window.open(`https://www.youtube.com/watch?v=${v.id.videoId}`,'_blank');
+      grid.appendChild(div);
+    });
+  }catch(e){console.error(e);}
+}
+</script>
 </body>
 </html>
